--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TODO: Set the document title to the name of your application -->
-    <title>ZKS Code</title>
-    <meta name="description" content="ZKS Code" />
+    <title>ZKS Note</title>
+    <meta name="description" content="ZKS Note" />
     <meta name="author" content="g0gobliN" />
 
     <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="ZKS-Code App" />
-    <meta property="og:description" content="ZKS Code" />
+    <meta property="og:title" content="ZKS-Note App" />
+    <meta property="og:description" content="ZKS Note" />
     <meta property="og:type" content="website" />
 
   </head>
